updated some text on home page

--- a/outfitliker-frontend/index.html
+++ b/outfitliker-frontend/index.html
@@ -22,7 +22,7 @@
       </form>  
     </div>
     <div id="header" style="display: none">
-      <h2 id="welcome">Hey, Welcome to Outfit Liker!</h2>
+      <h2 id="welcome">Hey, !</h2>
       <button id="view-profile">Your Profile</button>
       <div id="user-profile"style="display: none">
         <button id="new-outfit">Add a 🔥fit</button>
@@ -54,7 +54,7 @@
     <hr>
 
     <div id="main-container" style="display: none">
-      <h1> 🔥Fire Fits🔥</h1>
+      <h1> OutfitLiker </h1>
       <ul id="outfits" class="cards">
       </ul>
     </div>
